--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,23 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2.3.5
+    - name: Setup PHP
+      uses: shivammathur/setup-php@2.15.0
+      with:
+        php-version: '8.0'
+        tools: cs2pr, phpcs
+    - name: Run phpcs
+      run: phpcs -q --report=checkstyle *.php tests/*.php | cs2pr
+  
   unit-tests:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['7.4', '8.0']
+        php-versions: ['7.4', '8.0', '8.1']
     steps:
     - uses: actions/checkout@v2.3.5
     - name: Setup PHP
