--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,28 @@ jobs:
         php-version: '8.0'
         tools: cs2pr, phpcs
     - name: Run phpcs
-      run: phpcs -q --report=checkstyle src/*.php tests/*.php | cs2pr
+      run: phpcs -q --report=checkstyle src/ tests/ | cs2pr
   
+  benchmark:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        php-versions: ['7.4', '8.0', '8.1']
+    steps:
+    - uses: actions/checkout@v2.4.0
+    - name: Setup PHP
+      uses: shivammathur/setup-php@2.15.0
+      with:
+        php-version: ${{ matrix.php-versions }}   
+        tools: composer, phpbench/phpbench
+        coverage: none
+        ini-values: memory_limit=-1
+    - name: Install dependencies
+      run: composer install
+    - name: PHPBench
+      run: phpbench run -q --report=aggregate --
+
+
   unit-tests:
     runs-on: ubuntu-20.04
     strategy:
