--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
         "psr-4": {
             "UUID\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
