--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,18 @@ jobs:
         tools: cs2pr, phpcs
     - name: Run phpcs
       run: phpcs -q --report=checkstyle src/ tests/ | cs2pr
-  
+
   benchmark:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['7.4', '8.0', '8.1', '8.2']
+        php-versions: ['8.0', '8.1', '8.2']
     steps:
     - uses: actions/checkout@v3
     - name: Setup PHP
       uses: shivammathur/setup-php@2.22.0
       with:
-        php-version: ${{ matrix.php-versions }}   
+        php-version: ${{ matrix.php-versions }}
         tools: composer, phpbench/phpbench
         coverage: none
         ini-values: memory_limit=-1
@@ -47,13 +47,13 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['7.4', '8.0', '8.1', '8.2']
+        php-versions: ['8.0', '8.1', '8.2']
     steps:
     - uses: actions/checkout@v3
     - name: Setup PHP
       uses: shivammathur/setup-php@2.22.0
       with:
-        php-version: ${{ matrix.php-versions }}   
+        php-version: ${{ matrix.php-versions }}
         tools: composer, phpunit
     - name: Install dependencies
       run: composer install
