--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@2.24.0
       with:
-        php-version: '8.1'
+        php-version: '8.2'
         tools: cs2pr, phpcs
     - name: Run phpcs
       run: phpcs -q --report=checkstyle src/ tests/ | cs2pr
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1', '8.2']
+        php-versions: ['8.1', '8.2']
     steps:
     - uses: actions/checkout@v3
     - name: Setup PHP
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1', '8.2']
+        php-versions: ['8.1', '8.2']
     steps:
     - uses: actions/checkout@v3
     - name: Setup PHP
