--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
     "require": {
         "php": "^8.1"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
+    },
     "autoload": {
         "psr-4": {
             "UUID\\": "src/"
